# DiOMP

./: .clangd
clang/include/clang-c/: Index.h
clang/include/clang/AST/: RecursiveASTVisitor.h  StmtOpenMP.h
clang/include/clang/Basic/: StmtNodes.td
clang/include/clang/Sema/: Sema.h  SemaOpenMP.h
clang/include/clang/Serialization/: ASTBitCodes.h
clang/lib/AST/: StmtOpenMP.cpp  StmtPrinter.cpp  StmtProfile.cpp
clang/lib/Basic/: OpenMPKinds.cpp
clang/lib/CodeGen/: CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGStmt.cpp  CGStmtOpenMP.cpp  CodeGenFunction.h
clang/lib/Parse/: ParseOpenMP.cpp
clang/lib/Sema/: SemaExceptionSpec.cpp  SemaOpenMP.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReaderStmt.cpp  ASTWriterStmt.cpp
clang/lib/StaticAnalyzer/Core/: ExprEngine.cpp
clang/tools/libclang/: CIndex.cpp  CXCursor.cpp
flang/lib/Semantics/: resolve-directives.cpp
lldb/source/Plugins/Process/MacOSX-Kernel/: CommunicationKDP.cpp  CommunicationKDP.h
llvm/include/llvm/Frontend/OpenMP/: OMP.td  OMPKinds.def
llvm/lib/Transforms/InstCombine/: InstCombineCasts.cpp
mlir/docs/DefiningDialects/: AttributesAndTypes.md
offload/include/: device.h  omptarget.h
offload/plugins-nextgen/common/include/: PluginInterface.h
offload/plugins-nextgen/common/src/: PluginInterface.cpp
offload/plugins-nextgen/cuda/src/: rtl.cpp
offload/src/: device.cpp  exports
offload/src/OpenMP/: API.cpp
openmp/: CMakeLists.txt
openmp/diomp/: .gitignore  CMakeLists.txt  readme.md
openmp/diomp/include/: diomp.h  diomp.hpp  diompcomm.h  diompmem.h  gasnetEX.md  gasnetex.cpp  tools.h
openmp/diomp/src/: diomp.cpp  diompCC.py  diompallocator.cpp  diompcc.py  diompcxx.py  diompmem.cpp
openmp/runtime/src/: dllexports  kmp.h  kmp_alloc.cpp  kmp_global.cpp  kmp_runtime.cpp  kmp_stub.cpp
openmp/runtime/src/include/: omp.h.var  omp_lib.F90.var  omp_lib.h.var
